--- a/fontend/css/home.css
+++ b/fontend/css/home.css
@@ -147,10 +147,9 @@ main {
 }
 
 .top img {
-  width: 50px;
-  height: 45px;
+  width: 49px;
+  height: 49px;
   border-radius: 50%;
-  box-shadow: 0px 4px 4px #00000026;
 }
 
 .top p {
@@ -226,4 +225,34 @@ main {
 .totalAmount,
 .saving {
   font-weight: 500;
+}
+
+.income_allocation {
+  display: flex;
+  flex-direction: column;
+  height: 230px;
+  width: 260px;
+  color: #3a3a3a;
+  font-family: "Inter";
+  align-items: center;
+  border-radius: 30px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.income_allocation input {
+  border-radius: 2px;
+  padding: 8px 3.2rem;
+  background-color: #ecf5ff;
+  border: none;
+  padding-inline-start: 5px;
+}
+
+.income_allocation button {
+  padding: 0.5rem 2.6rem;
+  border: none;
+  background-color: var(--main-theme);
+  color: var(--white-bg);
+  border-radius: 28px;
+  cursor: pointer;
+  margin-top: 3rem;
 }
